@@ -458,6 +458,23 @@ void CStringUtils::PipesToNulls(TCHAR* buffer, size_t length )
 	}
 }
 
+int CStringUtils::GetMatchingLength (const CString& lhs, const CString& rhs)
+{
+    int lhsLength = lhs.GetLength();
+    int rhsLength = rhs.GetLength();
+    int maxResult = min (lhsLength, rhsLength);
+
+    LPCTSTR pLhs = lhs;
+    LPCTSTR pRhs = rhs;
+
+    for (int i = 0; i < maxResult; ++i)
+        if (pLhs[i] != pRhs[i])
+            return i;
+
+    return maxResult;
+}
+
+
 #define IsCharNumeric(C) (!IsCharAlpha(C) && IsCharAlphaNumeric(C))
 
 
